<resources>
    <string name="app_name">Bluesheet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ventas_estrategicas_1">VentasEstrategicas_1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="c_p">C.P.</string>
    <string name="calle_y_n">Calle y Nº</string>
    <string name="col_municipio">Col. Municipio</string>
    <string name="estado">Estado</string>
    <string name="ciudad">Ciudad</string>
    <string name="m_dulo_de_producto_tipo_del_sustrato">Módulo de producto tipo del sustrato</string>
    <string name="corugado_hoja">Corugado hoja</string>
</resources>
